Adjusted top header's top margin to prevent scroll suggestion from overlapping the informative text

--- a/static/css/header.css
+++ b/static/css/header.css
@@ -42,7 +42,7 @@
 
 @media screen and (max-width: 768px) {
     .club-title {
-        margin-top: 170px;
+        margin-top: 100px;
     }
 
     .club-title .title h1 {
